--- a/app/project.json
+++ b/app/project.json
@@ -12,7 +12,7 @@
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.1.0",
     "Microsoft.AspNetCore.Mvc": "1.1.0",
     "Microsoft.AspNetCore.Razor.Tools": {
-      "version": "1.1.0-preview2-final",
+      "version": "1.1.0-*",
       "type": "build"
     },
     "Microsoft.AspNetCore.Server.IISIntegration": "1.1.0",
@@ -20,7 +20,7 @@
     "Microsoft.AspNetCore.StaticFiles": "1.1.0",
     "Microsoft.EntityFrameworkCore.Sqlite": "1.1.0",
     "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.1.0-preview2-final",
+      "version": "1.1.0-*",
       "type": "build"
     },
     "Microsoft.Extensions.Configuration.EnvironmentVariables": "1.1.0",
@@ -36,33 +36,33 @@
       "type": "build"
     },
     "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
-      "version": "1.1.0-preview4-final",
+      "version": "1.1.0-*",
       "type": "build"
     }
   },
 
   "tools": {
     "Microsoft.AspNetCore.Razor.Tools": {
-      "version": "1.1.0-preview4-final",
+      "version": "1.1.0-*",
       "imports": "portable-net45+win8+dnxcore50"
     },
     "Microsoft.AspNetCore.Server.IISIntegration.Tools": {
-      "version": "1.1.0-preview2-final",
+      "version": "1.1.0-*",
       "imports": "portable-net45+win8+dnxcore50"
     },
     "Microsoft.EntityFrameworkCore.Tools": {
-      "version": "1.1.0-preview4-final",
+      "version": "1.1.0-*",
       "imports": [
         "portable-net45+win8+dnxcore50",
         "portable-net45+win8"
       ]
     },
     "Microsoft.Extensions.SecretManager.Tools": {
-      "version": "1.1.0-preview2-final",
+      "version": "1.1.0-*",
       "imports": "portable-net45+win8+dnxcore50"
     },
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
-      "version": "1.1.0-preview4-final",
+      "version": "1.1.0-*",
       "imports": [
         "portable-net45+win8+dnxcore50",
         "portable-net45+win8"
