--- a/app/project.json
+++ b/app/project.json
@@ -32,7 +32,7 @@
     "Microsoft.Extensions.Logging.Debug": "1.1.0",
     "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0",
     "Microsoft.VisualStudio.Web.CodeGeneration.Tools": {
-      "version": "1.1.0-preview2-final",
+      "version": "1.1.0-*",
       "type": "build"
     },
     "Microsoft.VisualStudio.Web.CodeGenerators.Mvc": {
